<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical">

    <include
        android:id="@+id/includeToolbar"
        layout="@layout/toolbar_home" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/search_view_toolbar_margin_bottom"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@drawable/bg_white_rounded"
        android:queryHint="Search for a product"
        app:defaultQueryHint="Search for a product"
        app:iconifiedByDefault="false"
        app:queryBackground="@drawable/bg_white"
        app:queryHint="Search for a product" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_divider_height"
        android:background="@drawable/line_divider"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingStart = "4dp"
            android:paddingEnd = "4dp"
            android:orientation="vertical"
            tools:context=".ui.home.HomeFragment">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/header_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                tools:listitem="@layout/header_list_item"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <com.rbrooks.indefinitepagerindicator.IndefinitePagerIndicator
                android:id="@+id/recyclerview_pager_indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                app:selectedDotColor="@color/colorAccent"
                app:dotColor="@color/not_selected_pager_indicator"
                app:dotCount="4" />

            <TextView
                android:id="@+id/currentDealsTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/current_deals"
                android:textSize="18sp"
                android:textColor ="@android:color/black"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/current_deals_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                tools:listitem="@layout/list_item_current_deals_and_popular_categories"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textColor ="@android:color/black"
                android:text="@string/popular_categories"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popular_categories_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                tools:listitem="@layout/list_item_current_deals_and_popular_categories"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textColor ="@android:color/black"
                android:text="@string/featured_brands"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/featured_brands_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                tools:listitem="@layout/header_list_item"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:textColor ="@android:color/black"
                android:text="@string/trending_products"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trending_products_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:listitem="@layout/header_list_item"
                app:spanCount="2"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />




        </LinearLayout>

    </ScrollView>
</LinearLayout>

